--- a/ipam/src/App.css
+++ b/ipam/src/App.css
@@ -1,42 +1,250 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+@import url('https://fonts.googleapis.com/css?family=Fira+Sans:400,500,600,700,800');
+* {
+  box-sizing: border-box;
+  scrollbar-width: none;
+}
+body {
+  background: #b5d6f5 !important;
+  
+  height: 50vh;
+  display: flex;
+  font-weight: 400;
+  font-family: 'Fira Sans', sans-serif;
+}
+h1,h2,h3,h4,h5,h6,label,span {
+  font-weight: 500;
+  font-family: 'Fira Sans', sans-serif;
+}
+body, html, .App, #root, .auth-wrapper {
+  width: 100%;
+  
+}
+.navbar-light {
+  background-color: #ffffff;
+  box-shadow: 0px 14px 80px rgba(34, 35, 58, 0.2);
+}
+.auth-wrapper {
+  margin-top: 100px;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  text-align: left;
+}
+.auth-inner {
+  width: 450px;
+  margin: auto;
+  background: #ffffff;
+  box-shadow: 0px 14px 80px rgba(34, 35, 58, 0.2);
+  padding: 40px 55px 45px 55px;
+  border-radius: 15px;
+  transition: all .3s;
+}
+.auth-wrapper .form-control:focus {
+  border-color: #167bff;
+  box-shadow: none;
+}
+.auth-wrapper h3 {
   text-align: center;
+  margin: 0;
+  line-height: 1;
+  padding-bottom: 20px;
+}
+.custom-control-label {
+  font-weight: 400;
+}
+.forgot-password,
+.forgot-password a {
+  text-align: right;
+  font-size: 13px;
+  padding-top: 10px;
+  color: #7f7d7d;
+  margin: 0;
+}
+.forgot-password a {
+  color: #167bff;
+}
+.box-container{
+  margin-top: 50px;
+  width: 100%;
+  
+}
+.box {
+ display: flex;
+
+ margin: auto;
+  justify-content: space-between;
+ flex-wrap: wrap;
+  text-align: left;
+  width: 90%;
+  
+}
+.msg-list{
+  position: relative;
+  flex-basis: 80%;
+  overflow-x: hidden;
+  background-color: #ffffff;
+  box-shadow: 0px 14px 80px rgba(34, 35, 58, 0.2);
+  padding: 5px 5px 5px 10px;
+  border-radius: 5px;
+  transition: all .3s;
+  height: 600px;
+ 
+  margin: auto;
+  
+}
+.left-icons {
+  position: fixed;
+  top: 10px;
+  left: 50px;
+  display: flex;
+  flex-direction: column;
+}
+.btn-nav{
+  
+  color: white;
+  position: relative;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+ margin: auto ;
+  width: 100%;
+  border-bottom: 3px solid #070707;
+  padding: 20px;
+  
+  
+
+}
+.delete-btn{
+  background-color: #f44336;
+  color: white;
+   
+  
+  cursor: pointer;
+  transition: all .3s;
+}
+.next-btn{
+  background-color: #4CAF50;
+  color: white;
+  
+ 
+  cursor: pointer;
+  transition: all .3s;
+
+}
+.prev-btn{
+  background-color: #4CAF50;
+  color: white;
+  
+
+  cursor: pointer;
+  transition: all .3s;
+
+}
+.ant-spin-container{
+  height: 600px;
+  overflow-y: scroll;
+}
+.ant-list-item{
+  padding: 5px 10px 5px 5px;
+  padding-left: 10px !important;
+  margin: 2px;
+  background-color: aliceblue;
+  transition: all .3s;
+  height: 70px;
+  font-size: 10px;
+  cursor: pointer;
+}
+.ant-list-item:hover{
+  background-color: #f0f0f0;
+}
+.ant-list-item-meta-description{
+  font-size: 10px !important;
+}
+.msg-content{
+  position: relative;
+  flex-basis: 80%;
+  overflow-x: hidden;
+  background-color: #ffffff;
+  box-shadow: 0px 14px 80px rgba(34, 35, 58, 0.2);
+  padding: 5px 5px 5px 10px;
+  border-radius: 5px;
+  transition: all .3s;
+  height: 600px;
+ 
+  margin: auto;
+  
+  
+}
+.msg{
+ margin: auto;
+
+  padding: 10px;
+ 
+
+  margin-top: 10px;
+  margin-bottom: 10px;
+  width: 98%;
+  height: 85%;
+  overflow-y: scroll
+
+
+}
+.logout-button {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  font-size: 0.8em;
+}
+.popup-form{
+  width: 500px;
+  position: absolute;
+  bottom: 50px;
+  right: 50px ;
+  transform: translate(-50%, -50%);
+  background: #e30808;
+  padding: 30px;
+  z-index: 1000;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
+@media screen and (max-width: 600px) {
+  .auth-inner {
+    width: 90%;
   }
-  to {
-    transform: rotate(360deg);
+  .box {
+   width: 100%;
   }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
+  .msg-list{
+    
+    width: 100%;
+    min-height: 90vh;
+    height: 100%;
+    flex-basis: 98%;
   }
-}
+  .msg-content{
+    width: 100%;
+   
+    height: 100%;
+    
+    flex-basis: 98%;
+  }
+  .popup-form{
+    width: 90%;
+  }
+  .msg{
+    margin: auto;
+   
+     padding: 10px;
+    min-height: 80vh;
+   
+     margin-top: 10px;
+     margin-bottom: 10px;
+     width: 100%;
+     height: 100%;
+     overflow-y: scroll;
+  }
+ 
+   
 
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
+  
 }
