--- a/ipam/src/App.css
+++ b/ipam/src/App.css
@@ -23,26 +23,25 @@ body, html, .App, #root, .auth-wrapper {
   background-color: #ffffff;
   box-shadow: 0px 14px 80px rgba(34, 35, 58, 0.2);
 }
-.auth-wrapper {
-  margin-top: 100px;
+
+.main-nav{
+  position: fixed;
+  top: 0;
+  width: 100%;
   display: flex;
-  justify-content: center;
-  flex-direction: column;
-  text-align: left;
+
 }
-.auth-inner {
-  width: 450px;
+.form{
+  width: 400px;
   margin: auto;
-  background: #ffffff;
+  padding: 20px;
+  background-color: #ffffff;
   box-shadow: 0px 14px 80px rgba(34, 35, 58, 0.2);
-  padding: 40px 55px 45px 55px;
-  border-radius: 15px;
+  border-radius: 10px;
   transition: all .3s;
+
 }
-.auth-wrapper .form-control:focus {
-  border-color: #167bff;
-  box-shadow: none;
-}
+
 .auth-wrapper h3 {
   text-align: center;
   margin: 0;
@@ -64,7 +63,7 @@ body, html, .App, #root, .auth-wrapper {
   color: #167bff;
 }
 .box-container{
-  margin-top: 50px;
+   margin: 0;
   width: 100%;
   
 }
@@ -75,7 +74,7 @@ body, html, .App, #root, .auth-wrapper {
   justify-content: space-between;
  flex-wrap: wrap;
   text-align: left;
-  width: 90%;
+  width: 100%;
   
 }
 .msg-list{
@@ -92,13 +91,18 @@ body, html, .App, #root, .auth-wrapper {
   margin: auto;
   
 }
-.left-icons {
-  position: fixed;
-  top: 10px;
-  left: 50px;
+.mailbox-nav{
+  position: relative;
   display: flex;
-  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  margin: auto;
+  
+  
+  padding: 20px 20%;
+
 }
+
 .btn-nav{
   
   color: white;
@@ -189,12 +193,7 @@ body, html, .App, #root, .auth-wrapper {
 
 
 }
-.logout-button {
-  position: absolute;
-  top: 10px;
-  right: 10px;
-  font-size: 0.8em;
-}
+
 .popup-form{
   width: 500px;
   position: absolute;
@@ -208,9 +207,7 @@ body, html, .App, #root, .auth-wrapper {
 
 
 @media screen and (max-width: 600px) {
-  .auth-inner {
-    width: 90%;
-  }
+ 
   .box {
    width: 100%;
   }
@@ -243,8 +240,13 @@ body, html, .App, #root, .auth-wrapper {
      height: 100%;
      overflow-y: scroll;
   }
- 
-   
+ .form {
+
+  width: 100%;
+  height: 100% ;  
+
+
+ }
 
   
 }
