--- a/ipam/src/App.css
+++ b/ipam/src/App.css
@@ -4,9 +4,8 @@
   scrollbar-width: none;
 }
 body {
-  background: #b5d6f5 !important;
-  
-  height: 50vh;
+  background: #f1f1f1 !important;
+  min-height: 60vh;
   display: flex;
   font-weight: 400;
   font-family: 'Fira Sans', sans-serif;
@@ -18,6 +17,12 @@ h1,h2,h3,h4,h5,h6,label,span {
 body, html, .App, #root, .auth-wrapper {
   width: 100%;
   
+}
+.custom-link{
+  color: #f44336;
+}
+.s-btn{
+  background: #000;
 }
 .navbar-light {
   background-color: #ffffff;
@@ -42,6 +47,7 @@ body, html, .App, #root, .auth-wrapper {
 
 }
 
+
 .auth-wrapper h3 {
   text-align: center;
   margin: 0;
@@ -51,25 +57,14 @@ body, html, .App, #root, .auth-wrapper {
 .custom-control-label {
   font-weight: 400;
 }
-.forgot-password,
-.forgot-password a {
-  text-align: right;
-  font-size: 13px;
-  padding-top: 10px;
-  color: #7f7d7d;
-  margin: 0;
-}
-.forgot-password a {
-  color: #167bff;
-}
+
 .box-container{
-   margin: 0;
+   margin: auto;
   width: 100%;
   
 }
 .box {
  display: flex;
-
  margin: auto;
   justify-content: space-between;
  flex-wrap: wrap;
@@ -87,26 +82,34 @@ body, html, .App, #root, .auth-wrapper {
   border-radius: 5px;
   transition: all .3s;
   height: 600px;
- 
   margin: auto;
   
 }
 .mailbox-nav{
   position: relative;
   display: flex;
+  flex-direction: column;
   justify-content: space-between;
   align-items: center;
   margin: auto;
-  
-  
-  padding: 20px 20%;
+ margin-bottom: 5px;
+  padding: 5px;
+  background-color: #f1f1f1;
 
+}
+.top-buttons{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: auto;
+  padding: 10px 10%;
+  width: 100%;
+  border-bottom: 1px solid #000;
 }
 .delete-text{
   color: #f44336;
   font-size: 20px;
   font-weight: 500;
-
 }
 .btn-nav{
   
@@ -217,6 +220,18 @@ body, html, .App, #root, .auth-wrapper {
   padding: 30px;
   z-index: 1000;
 }
+.left-icons{
+  display: flex;
+ float: left;
+  padding: 10px;
+}
+.menu{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  padding: 20px !important;
+}
 
 
 @media screen and (max-width: 600px) {
@@ -231,6 +246,7 @@ body, html, .App, #root, .auth-wrapper {
     height: 100%;
     flex-basis: 98%;
   }
+ 
   .msg-content{
     width: 100%;
    
