--- a/ipam/src/App.css
+++ b/ipam/src/App.css
@@ -85,6 +85,16 @@ body, html, .App, #root, .auth-wrapper {
   margin: auto;
   
 }
+.msg-list-header{
+  border-bottom: 1px solid #0a0a0a;
+  margin-bottom: 5px;
+}
+.msg-list-header h1{
+  font-size: 40px;
+  margin: auto;
+  padding: 10px;
+  text-align: center;
+}
 .mailbox-nav{
   position: relative;
   display: flex;
@@ -259,22 +269,19 @@ body, html, .App, #root, .auth-wrapper {
   }
   .msg{
     margin: auto;
-   
      padding: 10px;
     min-height: 80vh;
-   
      margin-top: 10px;
      margin-bottom: 10px;
-     width: 100%;
      height: 100%;
      overflow-y: scroll;
   }
  .form {
-
   width: 100%;
   height: 100% ;  
-
-
+ }
+ .msg-info{
+    font-size: 10px;
  }
 
   
