--- a/ipam/src/App.css
+++ b/ipam/src/App.css
@@ -8,11 +8,11 @@ body {
   min-height: 60vh;
   display: flex;
   font-weight: 400;
-  font-family: 'Fira Sans', sans-serif;
+  font-family: 'Fira Sans', sans-serif , 'Roboto', sans-serif;
 }
 h1,h2,h3,h4,h5,h6,label,span {
   font-weight: 500;
-  font-family: 'Fira Sans', sans-serif;
+  font-family: 'Roboto', sans-serif;
 }
 body, html, .App, #root, .auth-wrapper {
   width: 100%;
@@ -57,19 +57,21 @@ body, html, .App, #root, .auth-wrapper {
 .custom-control-label {
   font-weight: 400;
 }
-
 .box-container{
-   margin: auto;
+  padding: 0;
   width: 100%;
   
 }
 .box {
  display: flex;
  margin: auto;
-  justify-content: space-between;
+ justify-content: center;
+  align-items: center;
+
  flex-wrap: wrap;
-  text-align: left;
+ text-align: left;
   width: 100%;
+  height: 600px ;
   
 }
 .msg-list{
@@ -79,10 +81,11 @@ body, html, .App, #root, .auth-wrapper {
   background-color: #ffffff;
   box-shadow: 0px 14px 80px rgba(34, 35, 58, 0.2);
   padding: 5px 5px 5px 10px;
+  margin-top: 40px;
   border-radius: 5px;
   transition: all .3s;
-  height: 600px;
-  margin: auto;
+  height: 500px;
+  
   
 }
 .msg-list-header{
@@ -96,25 +99,23 @@ body, html, .App, #root, .auth-wrapper {
   text-align: center;
 }
 .mailbox-nav{
-  position: relative;
+  position: fixed;
+  top: 0;
+  width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  margin: auto;
- margin-bottom: 5px;
-  padding: 5px;
+  
   background-color: #f1f1f1;
-
 }
 .top-buttons{
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin: auto;
-  padding: 10px 10%;
+  padding: 5px 10%;
   width: 100%;
-  border-bottom: 1px solid #000;
+
 }
 .delete-text{
   color: #f44336;
@@ -197,13 +198,10 @@ body, html, .App, #root, .auth-wrapper {
   background-color: #ffffff;
   box-shadow: 0px 14px 80px rgba(34, 35, 58, 0.2);
   padding: 5px 5px 5px 10px;
+  margin-top: 40px;
   border-radius: 5px;
   transition: all .3s;
-  height: 600px;
- 
-  margin: auto;
-  
-  
+  height: 500px;
 }
 .msg{
  margin: auto;
